20080215 ui/win32/win32ui.c: Win32: implementation of the Filters dialog using a
	 reusable selector_dialog (Marek).
20080217 ui/win32/{win32ui.c,pokefinder.{c,rc},win32internals.h,Makefile.am}:
	 Win32: fixes for pokefinder (Marek).
20080220 ui/win32/{win32ui.c,debugger.{c,h,rc},win32internals.h}: Win32: Partial
	 implementation of the debugger window (Marek).
20080221 ui/win32/{debugger.{c,h,rc}}: Win32: implementation of disassembly pane
	 in the debugger window (Marek).
20080227 disk/disk.c: disk 'log' formatting fixes (part of patch #1894441)
         (Gergely Szasz).
20080227 disk/disk.c: auto disk density selection fix (part of patch #1894441)
         (Gergely Szasz).
20080227 disk/disk.c: track length calculation fixes (include gap lengths and
         use sector headers rather than file header lengths (part of patch
         #1894441) (Gergely Szasz).
20080227 disk/disk.c: add support for DSK/EDSK files with weak sectors, use the
         first 'copy' of the weak sector and fix sector lengths when there are
         weak sectors with multiple images in a file (part of patch #1894441)
         (Gergely Szasz).
20080227 disk/{fdd.[ch]}: add automatic disk geometry setting from the loaded
         disk file and set fdd->index if needed (part of patch #1894441)
         (Gergely Szasz).
20080228 ula.c: use ULA_CONTENTION macro.
20080229 event.[ch],disk/{beta.c,fdd.[ch],plusd.c,wd_fdc.[ch]}: add fdd motor
         on/off, head load/unload, spindle motor spin up/down, ready
         state/signal and fdd drive select emulation (remainder of patch
         #1894441) (Gergely Szasz).
20080304 windres.rc,ui/win32/{memorybrowser.{c,h,rc},win32ui.c,debugger.c,
	 Makefile.am}: Win32: Initial implementation of the Memory Browser
	 dialog (Marek).
20080306 disk/plusd.c,if1.c,machine.[ch]: refactor loading custom ROMs from
         snapshots for +D and Interface 1 (Fred).
20080311 memory.c: add support for saving custom machine ROMs in snapshots
         (Fred).