@@ -23,10 +23,16 @@
 
 */
 
+/* FIXME: consider renaming this file to statusbar.rc */
+
 win32bmp_disk_active    BITMAP "ui/win32/icons/disk_active.bmp"
 win32bmp_disk_inactive  BITMAP "ui/win32/icons/disk_inactive.bmp"
+win32bmp_mdr_active     BITMAP "ui/win32/icons/mdr_active.bmp"
+win32bmp_mdr_inactive   BITMAP "ui/win32/icons/mdr_inactive.bmp"
 win32bmp_pause_active   BITMAP "ui/win32/icons/pause_active.bmp"
 win32bmp_pause_inactive BITMAP "ui/win32/icons/pause_inactive.bmp"
 win32bmp_tape_active    BITMAP "ui/win32/icons/tape_active.bmp"
 win32bmp_tape_inactive  BITMAP "ui/win32/icons/tape_inactive.bmp"
 win32bmp_tape_marker    BITMAP "ui/win32/icons/tape_marker.bmp"
+win32bmp_mouse_active   BITMAP "ui/win32/icons/mouse_active.bmp"
+win32bmp_mouse_inactive BITMAP "ui/win32/icons/mouse_inactive.bmp"
